// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Search renders search form with default state 1`] = `
<div>
  <div
    class="sc-kOHTFy jcOGhG"
  >
    <div
      class="sc-dtInlp kVzfnv"
    >
      <div
        class="sc-kOPcWA"
      >
        <div
          class="sc-eldPxw ijegzl"
        >
          <label
            class="sc-fPXMVh bEdddQ"
            for="photo-sort-order"
          >
            Сортировать
          </label>
          <select
            aria-hidden="true"
            id="photo-sort-order"
            name="order"
            style="position: absolute; opacity: 0; pointer-events: none; width: 0px; height: 0px;"
            tabindex="-1"
          >
            <option
              value="orderDownByTakenAt"
            >
              Вначале новые
            </option>
            <option
              value="orderUpByTakenAt"
            >
              Вначале старые
            </option>
            <option
              value="orderDownByEdited"
            >
              Последние загруженные
            </option>
          </select>
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="sc-gFqAkO jCsvzr"
            type="button"
          >
            Вначале новые
          </button>
        </div>
      </div>
      <div
        class="sc-cWSHoS gNmgIw"
      >
        <label
          class="sc-eBMEMD laWJjj"
          for="photo-filter-date"
        >
          Период
        </label>
        <input
          aria-expanded="false"
          class="sc-dCFHLc bODQtF"
          id="photo-filter-date"
          placeholder="Выберите период"
          readonly=""
          type="text"
          value=""
        />
      </div>
      <div
        class="sc-kOPcWA"
      >
        <label>
          Страна
          <input
            id="photo-filter-country"
            name="countryInput"
            placeholder="Введите страну и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-feUZmx kqTaa"
        />
      </div>
      <div
        class="sc-kOPcWA"
      >
        <label>
          Город
          <input
            id="photo-filter-city"
            name="cityInput"
            placeholder="Введите город и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-feUZmx kqTaa"
        />
      </div>
      <div
        class="sc-kOPcWA"
      >
        <label>
          Теги
          <input
            id="photo-filter-tags"
            name="tagInput"
            placeholder="Введите тег и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-feUZmx kqTaa"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Search renders with different queryParams renders with all params 1`] = `
<div>
  <div
    class="sc-kOHTFy jcOGhG"
  >
    <div
      class="sc-dtInlp kVzfnv"
    >
      <div
        class="sc-kOPcWA"
      >
        <div
          class="sc-eldPxw ijegzl"
        >
          <label
            class="sc-fPXMVh bEdddQ"
            for="photo-sort-order"
          >
            Сортировать
          </label>
          <select
            aria-hidden="true"
            id="photo-sort-order"
            name="order"
            style="position: absolute; opacity: 0; pointer-events: none; width: 0px; height: 0px;"
            tabindex="-1"
          >
            <option
              value="orderDownByTakenAt"
            >
              Вначале новые
            </option>
            <option
              value="orderUpByTakenAt"
            >
              Вначале старые
            </option>
            <option
              value="orderDownByEdited"
            >
              Последние загруженные
            </option>
          </select>
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="sc-gFqAkO jCsvzr"
            type="button"
          >
            Последние загруженные
          </button>
        </div>
      </div>
      <div
        class="sc-cWSHoS gNmgIw"
      >
        <label
          class="sc-eBMEMD laWJjj"
          for="photo-filter-date"
        >
          Период
        </label>
        <input
          aria-expanded="false"
          class="sc-dCFHLc bODQtF"
          id="photo-filter-date"
          placeholder="Выберите период"
          readonly=""
          type="text"
          value="2024-01 — 2024-12"
        />
      </div>
      <div
        class="sc-kOPcWA"
      >
        <label>
          Страна
          <input
            id="photo-filter-country"
            name="countryInput"
            placeholder="Введите страну и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-feUZmx kqTaa"
        />
      </div>
      <div
        class="sc-kOPcWA"
      >
        <label>
          Город
          <input
            id="photo-filter-city"
            name="cityInput"
            placeholder="Введите город и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-feUZmx kqTaa"
        />
      </div>
      <div
        class="sc-kOPcWA"
      >
        <label>
          Теги
          <input
            id="photo-filter-tags"
            name="tagInput"
            placeholder="Введите тег и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-feUZmx kqTaa"
        >
          <span
            class="sc-fUnMCe ktpqVU"
          >
            foo
            <button
              aria-label="Удалить тег foo"
              class="sc-hzhJZP likwTF"
              type="button"
            >
              ×
            </button>
          </span>
          <span
            class="sc-fUnMCe ktpqVU"
          >
            bar
            <button
              aria-label="Удалить тег bar"
              class="sc-hzhJZP likwTF"
              type="button"
            >
              ×
            </button>
          </span>
          <span
            class="sc-fUnMCe ktpqVU"
          >
            baz
            <button
              aria-label="Удалить тег baz"
              class="sc-hzhJZP likwTF"
              type="button"
            >
              ×
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search renders with different queryParams renders with date range params 1`] = `
<div>
  <div
    class="sc-kOHTFy jcOGhG"
  >
    <div
      class="sc-dtInlp kVzfnv"
    >
      <div
        class="sc-kOPcWA"
      >
        <div
          class="sc-eldPxw ijegzl"
        >
          <label
            class="sc-fPXMVh bEdddQ"
            for="photo-sort-order"
          >
            Сортировать
          </label>
          <select
            aria-hidden="true"
            id="photo-sort-order"
            name="order"
            style="position: absolute; opacity: 0; pointer-events: none; width: 0px; height: 0px;"
            tabindex="-1"
          >
            <option
              value="orderDownByTakenAt"
            >
              Вначале новые
            </option>
            <option
              value="orderUpByTakenAt"
            >
              Вначале старые
            </option>
            <option
              value="orderDownByEdited"
            >
              Последние загруженные
            </option>
          </select>
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="sc-gFqAkO jCsvzr"
            type="button"
          >
            Вначале новые
          </button>
        </div>
      </div>
      <div
        class="sc-cWSHoS gNmgIw"
      >
        <label
          class="sc-eBMEMD laWJjj"
          for="photo-filter-date"
        >
          Период
        </label>
        <input
          aria-expanded="false"
          class="sc-dCFHLc bODQtF"
          id="photo-filter-date"
          placeholder="Выберите период"
          readonly=""
          type="text"
          value="15-01-2024 — 31-12-2024"
        />
      </div>
      <div
        class="sc-kOPcWA"
      >
        <label>
          Страна
          <input
            id="photo-filter-country"
            name="countryInput"
            placeholder="Введите страну и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-feUZmx kqTaa"
        />
      </div>
      <div
        class="sc-kOPcWA"
      >
        <label>
          Город
          <input
            id="photo-filter-city"
            name="cityInput"
            placeholder="Введите город и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-feUZmx kqTaa"
        />
      </div>
      <div
        class="sc-kOPcWA"
      >
        <label>
          Теги
          <input
            id="photo-filter-tags"
            name="tagInput"
            placeholder="Введите тег и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-feUZmx kqTaa"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Search renders with different queryParams renders with order param 1`] = `
<div>
  <div
    class="sc-kOHTFy jcOGhG"
  >
    <div
      class="sc-dtInlp kVzfnv"
    >
      <div
        class="sc-kOPcWA"
      >
        <div
          class="sc-eldPxw ijegzl"
        >
          <label
            class="sc-fPXMVh bEdddQ"
            for="photo-sort-order"
          >
            Сортировать
          </label>
          <select
            aria-hidden="true"
            id="photo-sort-order"
            name="order"
            style="position: absolute; opacity: 0; pointer-events: none; width: 0px; height: 0px;"
            tabindex="-1"
          >
            <option
              value="orderDownByTakenAt"
            >
              Вначале новые
            </option>
            <option
              value="orderUpByTakenAt"
            >
              Вначале старые
            </option>
            <option
              value="orderDownByEdited"
            >
              Последние загруженные
            </option>
          </select>
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="sc-gFqAkO jCsvzr"
            type="button"
          >
            Вначале старые
          </button>
        </div>
      </div>
      <div
        class="sc-cWSHoS gNmgIw"
      >
        <label
          class="sc-eBMEMD laWJjj"
          for="photo-filter-date"
        >
          Период
        </label>
        <input
          aria-expanded="false"
          class="sc-dCFHLc bODQtF"
          id="photo-filter-date"
          placeholder="Выберите период"
          readonly=""
          type="text"
          value=""
        />
      </div>
      <div
        class="sc-kOPcWA"
      >
        <label>
          Страна
          <input
            id="photo-filter-country"
            name="countryInput"
            placeholder="Введите страну и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-feUZmx kqTaa"
        />
      </div>
      <div
        class="sc-kOPcWA"
      >
        <label>
          Город
          <input
            id="photo-filter-city"
            name="cityInput"
            placeholder="Введите город и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-feUZmx kqTaa"
        />
      </div>
      <div
        class="sc-kOPcWA"
      >
        <label>
          Теги
          <input
            id="photo-filter-tags"
            name="tagInput"
            placeholder="Введите тег и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-feUZmx kqTaa"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Search renders with different queryParams renders with tags param 1`] = `
<div>
  <div
    class="sc-kOHTFy jcOGhG"
  >
    <div
      class="sc-dtInlp kVzfnv"
    >
      <div
        class="sc-kOPcWA"
      >
        <div
          class="sc-eldPxw ijegzl"
        >
          <label
            class="sc-fPXMVh bEdddQ"
            for="photo-sort-order"
          >
            Сортировать
          </label>
          <select
            aria-hidden="true"
            id="photo-sort-order"
            name="order"
            style="position: absolute; opacity: 0; pointer-events: none; width: 0px; height: 0px;"
            tabindex="-1"
          >
            <option
              value="orderDownByTakenAt"
            >
              Вначале новые
            </option>
            <option
              value="orderUpByTakenAt"
            >
              Вначале старые
            </option>
            <option
              value="orderDownByEdited"
            >
              Последние загруженные
            </option>
          </select>
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="sc-gFqAkO jCsvzr"
            type="button"
          >
            Вначале новые
          </button>
        </div>
      </div>
      <div
        class="sc-cWSHoS gNmgIw"
      >
        <label
          class="sc-eBMEMD laWJjj"
          for="photo-filter-date"
        >
          Период
        </label>
        <input
          aria-expanded="false"
          class="sc-dCFHLc bODQtF"
          id="photo-filter-date"
          placeholder="Выберите период"
          readonly=""
          type="text"
          value=""
        />
      </div>
      <div
        class="sc-kOPcWA"
      >
        <label>
          Страна
          <input
            id="photo-filter-country"
            name="countryInput"
            placeholder="Введите страну и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-feUZmx kqTaa"
        />
      </div>
      <div
        class="sc-kOPcWA"
      >
        <label>
          Город
          <input
            id="photo-filter-city"
            name="cityInput"
            placeholder="Введите город и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-feUZmx kqTaa"
        />
      </div>
      <div
        class="sc-kOPcWA"
      >
        <label>
          Теги
          <input
            id="photo-filter-tags"
            name="tagInput"
            placeholder="Введите тег и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-feUZmx kqTaa"
        >
          <span
            class="sc-fUnMCe ktpqVU"
          >
            landscape
            <button
              aria-label="Удалить тег landscape"
              class="sc-hzhJZP likwTF"
              type="button"
            >
              ×
            </button>
          </span>
          <span
            class="sc-fUnMCe ktpqVU"
          >
            portrait
            <button
              aria-label="Удалить тег portrait"
              class="sc-hzhJZP likwTF"
              type="button"
            >
              ×
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
